--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -7,6 +7,6 @@
       <%- render(theme.copyright, 'pug'); %>
     <% } %>
     &copy; <%= date(new Date(), 'YYYY') %> <%= theme.author || config.author || config.title %><br>
-    <%= __('powered_by') %> <a href="https://hexo.io/" target="_blank">Hexo</a> & Theme <a href="https://github.com/Leosouthey/hexo-theme-vivia">Leosouthey魔改版Vivia</a>
+    <%= __('powered_by') %> <a href="https://hexo.io/" target="_blank">Hexo</a> & Theme <a href="https://github.com/Leosouthey/hexo-theme-vivia">Vivia</a> Modified By Leosouthey.
   </div>
 </footer>
